--- a/project-1/package.json
+++ b/project-1/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "concurrently": "^6.0.0",
     "lite-server": "^2.6.1",
+    "prettier": "^2.8.8",
     "typescript": "^4.2.2"
   }
 }
