--- a/project-1/tsconfig.json
+++ b/project-1/tsconfig.json
@@ -3,7 +3,9 @@
     "outDir": "dist/js",
     "target": "ES6",
     "noEmitOnError": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "removeComments": true
   },
   "include": ["app/**/*"]
 }
