--- a/project-1/tsconfig.json
+++ b/project-1/tsconfig.json
@@ -5,7 +5,8 @@
     "noEmitOnError": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "removeComments": true
+    "removeComments": true,
+    "experimentalDecorators": true
   },
   "include": ["app/src/**/*"]
 }
